--- a/app/assets/stylesheets/pages/home/_home_main_landing.scss
+++ b/app/assets/stylesheets/pages/home/_home_main_landing.scss
@@ -85,8 +85,14 @@
     justify-self: center;
     max-height: 90%;
     img {
+      // min-height: 100%;
+      // width: 100%;
+      width: 800px;
+      height: 800px;
+      min-width: 100%;
       min-height: 100%;
-      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
       object-fit: cover;
     }
     @media (min-width: 540px) and (min-height: 375px) and (max-height: 650px) and (orientation: landscape) {
